[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<=3.11.9"
dependencies = [
    "python-dotenv",
    "python-telegram-bot",
    "openai",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "telegram (>=0.0.1,<0.0.2)",
]
[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11.9"
openai = "*"
python-dotenv = "*"
python-telegram-bot = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
